[package]
name = "cargo-janu-flow"
version = "0.1.0"
repository = "https://github.com/virtuehive/janu-flow"
homepage = "http://tawedge.com"
authors = ["Cak Nyut <nyut99@gmail.com>",]
edition = "2018"
license = " EPL-2.0 OR Apache-2.0"
categories = ["network-programming"]
description = "Janu-Flow: janu-based data-flow programming framework for computations that span from the cloud to the device."
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "=1.9.0", features = ["attributes"] }
janu = { git = "https://github.com/virtuehive/janu.git", branch = "main", optional = true}
janu-util = { git = "https://github.com/virtuehive/janu.git", branch = "main", optional = true }
janu-flow = {path = "../janu-flow"}
structopt = "0.3"
clap = "2.33"
serde_derive = "1.0"
serde = { version = "1.0", features = ["derive"] }
cargo_toml = "0.10"
toml = "0.5.8"
serde_yaml = {version = "0.8"}
serde_json = "1.0"
rand = { version = "0.8", optional =  true}
tinytemplate = "1.2"
colored = "2"


[[bin]]
name = "cargo-janu-flow"
path = "src/bin/main.rs"


[lib]
path = "src/lib.rs"

[features]

local_registry = ["janu","janu-util", "rand"]

default = []