[package]
name = "janu-flow"
version = "0.1.0"
repository = "https://github.com/virtuehive/janu-flow"
homepage = "http://tawedge.com"
authors = ["Cak Nyut <nyut99@gmail.com>",]
edition = "2018"
license = " EPL-2.0 OR Apache-2.0"
categories = ["network-programming"]
description = "Janu-Flow: janu-based data-flow programming framework for computations that span from the cloud to the device."
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "=1.9.0", features = ["attributes"] }
async-trait = "0.1.50"
base64 = "0.13.0"
bincode = { version = "1.3"}
derive_more = "0.99.10"
const_format = "0.2.22"
env_logger = "0.9"
event-listener = "2.5.1"
flume = "0.10"
futures = "0.3.15"
futures-lite = "1.11.3"
git-version = "0.3"
libloading = "0.7.0"
log = "0.4"
paste = "1.0"
petgraph = "0.6.0"
pin-project-lite = "0.2.4"
serde = { version = "1.0.55", features = ["derive", "rc"] }
serde_cbor = {version = "0.11", optional = true}
serde_derive = "1.0.55"
serde_json = { version = "1.0", optional = true}
serde_yaml = {version = "0.8.13"}
structopt = "0.3.21"
typetag = "0.1"
uhlc = "0.4"
url = "2.2.2"
uuid = { version = "0.8", features = ["serde", "v4"] }
janu = { git = "https://github.com/virtuehive/janu.git", branch = "main"}
janu-flow-derive = {path = "../janu-flow-derive"}
janu-util = { git = "https://github.com/virtuehive/janu.git", branch = "main" }
jnrpc-macros = { git = "https://github.com/virtuehive/janu-rpc.git", branch = "main" }
jrpc = { git = "https://github.com/virtuehive/janu-rpc.git", branch = "main" }


[build-dependencies]
rustc_version = "0.4.0"

[features]
data_bincode = []
data_json = ["serde_json"]
data_cbor = ["serde_cbor"]

debug = ["data_json"]
default = ["debug"]
